tests/ui/missing_ref.stderr
error[E0277]: the size for values of type `str` cannot be known at compilation time
 --> tests/ui/missing_ref.rs:7:11
  |
L |     world.query::<(&u32, &str)>(|_, _| {});
  |           ^^^^^ doesn't have a size known at compile-time
  |
  = help: the trait `Sized` is not implemented for `str`
  = help: the following other types implement trait `secs::query::SparseSetGetter`:
            &C
            &mut C
            Option<T>
  = note: required for `&str` to implement `secs::query::SparseSetGetter`

error[E0277]: `u32` cannot be used as a query component
  --> tests/ui/missing_ref.rs:10:11
   |
LL |     world.query::<(u32, &&str)>(|_, _| {});
   |           ^^^^^
   |
   = help: the trait `secs::query::SparseSetGetter` is not implemented for `u32`
   = note: only references and `Option`s of references can be components
   = help: the following other types implement trait `secs::query::SparseSetGetter`:
             &C
             &mut C
             Option<T>
   = note: required for `(u32, &&str)` to implement `secs::query::Query<'_>`

error[E0277]: `u32` cannot be the first element of a query
  --> tests/ui/missing_ref.rs:10:11
   |
LL |     world.query::<(u32, &&str)>(|_, _| {});
   |           ^^^^^
   |
   = help: the trait `secs::query::Always` is not implemented for `u32`
   = note: move another element to the front of the list
   = help: the following other types implement trait `secs::query::Always`:
             &T
             &mut T
   = note: required for `(u32, &&str)` to implement `secs::query::Query<'_>`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0277`.
